# spectorin

./: .gitignore  README.md  cli_demo.py  pyproject.toml  setup_env.sh  setup_env.sh.example  spectorin.py  test_contract.py  test_contract_analysis.py  test_llm_providers.py  z3_builder.py
api/: analyze.py  main.py
api/routes/: graphs.py
cli/: analyze.py  test.py  verify.py
core/: .gitignore  engine.py  hookspecs.py  plugin_manager.py  pyteal_parser.py
core/ai_agents/: __init__.py  llm_providers.py  manager.py  ollama_agent.py
core/analysis/: taint_tracker.py
core/analyzers/: __init__.py  base_analyzer.py  move_analyzer.py  pyteal_analyzer.py  rust_analyzer.py  solidity_analyzer.py
core/fuzzers/: manager.py
core/graphs/: cfg_generator.py
core/parsers/: python_ast_parser.py  tree_sitter_loader.py
core/test/: test_pyteal_pipeline.py  test_z3_pipeline.py
core/verifiers/: ast_to_z3.py  manager.py  z3_engine.py
core/visualizations/: .gitignore  audit_visualizer.py
core/z3/: __init__.py  constraint_builder.py  smart_contract_adapter.py  smart_contract_to_z3_adapter.py
examples/: move_example.move  pyteal_example.py  rust_example.rs  solidity_example.sol
plugins/: default_plugin.py
plugins/move/: __init__.py  analyzer.py
plugins/pyteal/: __init__.py  analyzer.py
plugins/rust/: __init__.py  analyzer.py
plugins/solidity/: analyzer.py
sample_contracts/: vulnerable.move  vulnerable.py  vulnerable.rs  vulnerable.sol
ui/: .gitignore  package-lock.json  package.json
ui/.next/: trace
ui/pages/: cfg.tsx  index.tsx
ui/src/app/: layout.tsx  (+1 more)
(+28 files in other folders)
