[tool.poetry]
name = "spectorin"
version = "0.1.0"
description = "AI‑powered formal verification, static analysis & testing framework"
authors = ["Celestino <celestine.kariuki@strathmore.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
typer = "^0.15.2"
rich = "^14.0.0"
libcst = "^1.7.0"
tree-sitter = "^0.24.0"
z3-solver = "^4.14.1.0"
hypothesis = "^6.131.6"
pluggy = "^1.5.0"
langchain = "^0.3.23"
lmql = "^0.7.3"
ollama = "^0.4.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
